# AiBrowser

./: .gitignore  .project  1F 1D:  AGENTS.md  README.md  build.gradle.kts  extract-mnn.sh  gradle.properties  settings.gradle.kts
app/: .project  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mnn_jni.cpp
app/src/main/java/com/aibrowser/: AiBrowserApp.kt  MainActivity.kt
app/src/main/java/com/aibrowser/agent/: AgentViewModel.kt  AiService.kt  AppPerformanceManager.kt  BrowserToolSet.kt  GenieXManager.kt  GgufModelCatalog.kt  HfModels.kt  HfSearchService.kt  HumanEmulation.kt  InferenceStats.kt  LlamaCppProvider.kt  LocalLlmProvider.kt  LocalModelManager.kt  McpController.kt  MnnLlmProvider.kt  ModelDownloader.kt  ModelRepository.kt  StealthInjector.kt  ToolDefinitions.kt  ToolExecutor.kt
app/src/main/java/com/aibrowser/agent/mnn/: GenerateProgressListener.kt  MnnSession.kt
app/src/main/java/com/aibrowser/browser/: AutofillWebView.kt  BrowserViewModel.kt  TabManager.kt  TabState.kt
app/src/main/java/com/aibrowser/data/: SettingsRepository.kt
app/src/main/java/com/aibrowser/data/models/: ApiConfig.kt  AvailableGgufModel.kt  BehaviorConfig.kt  CloudProvider.kt  LLMModel.kt  LlamaCppSettings.kt  LocalLlmConfig.kt  Message.kt  ToolCall.kt
app/src/main/java/com/aibrowser/di/: AppModule.kt  NetworkModule.kt
app/src/main/java/com/aibrowser/service/: AgentForegroundService.kt
app/src/main/res/values/: themes.xml
docs/compose/plans/: 2026-06-13-ai-browser.md
docs/compose/specs/: 2026-06-13-ai-browser-design.md
(+22 files in other folders)
